# autonomous-uav-guide

./: .bandit  .codacy.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  vercel.json
.github/workflows/: ci.yml
docs/: ROADMAP.md  architecture.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/control/: geometric.md  lqr.md  pid.md
docs/costmap/: costmap.md
docs/environment/: world.md
docs/estimation/: complementary_filter.md  ekf.md  particle_filter.md  ukf.md
docs/guide/: architecture.md  getting-started.md
docs/models/: mixer.md  motor.md  quadrotor.md
docs/path_planning/: README.md  astar_3d.md  potential_field.md  rrt_star.md
docs/path_tracking/: README.md  geometric.md  lqr.md  pid.md
docs/perception/: perception.md
docs/planning/: astar_3d.md  potential_field.md  rrt_star.md
docs/sensors/: sensors.md
docs/simulations/: index.md
docs/simulations/environment/: index.md  (+1 more)
docs/swarm/: consensus_formation.md  leader_follower.md  potential_swarm.md  reynolds_flocking.md  virtual_structure.md  voronoi_coverage.md
docs/tracking/: feedback_linearisation.md  mppi.md
docs/trajectory/: min_snap.md  polynomial.md
docs/trajectory_planning/: README.md  min_snap.md  polynomial.md
docs/trajectory_tracking/: README.md  feedback_linearisation.md  mppi.md
docs/vehicles/: README.md  fixed_wing.md  mixer.md  motor.md  quadrotor.md  vtol.md
scripts/: regen_all_gifs.json  regen_all_gifs.py
simulations/: __init__.py  geometric_control_demo.py  min_snap_demo.py  path_planning_3d.py  waypoint_tracking.py
simulations/astar_3d/: run.py
simulations/geometric_control/: run.py
simulations/leader_follower/: run.py
simulations/min_snap/: run.py
simulations/mppi/: run.py
simulations/particle_filter/: run.py
simulations/polynomial_trajectory/: run.py
simulations/potential_field_3d/: run.py
simulations/rrt_star_3d/: run.py
simulations/waypoint_tracking/: run.py
src/quadrotor_sim/: __init__.py
src/uav_sim/: __init__.py
tests/: test_bbox_tracker.py  test_control_stack.py  test_costmap.py  test_data_panel.py  test_env_presets.py  test_environment.py  test_estimation.py  test_footprint.py  test_footprint_layer.py  test_frames.py  test_frenet.py  test_geometric.py  test_gimbal.py  test_gimbal_controller.py  test_integration_flight.py  test_integration_subsystems.py  test_lqr.py  test_lqr_path_tracker.py  test_min_snap.py  test_mixer.py  test_motor.py  test_mpc_controller.py  test_nmpc.py  test_package.py  test_path_smoothing.py  test_perception.py  test_pid.py  test_planning.py  test_presets.py  test_prm.py  test_pure_pursuit.py  test_quadrotor_model.py  test_quintic.py  test_sensors.py  test_state_machine.py  test_swarm.py  test_tracking.py  test_vehicles.py  test_viz_overhaul.py
(+310 files in other folders)
