# Erwin Lejeune - 2026-02-17

[project]
name = "uav-sim"
version = "0.2.0"
description = "From-scratch Python algorithms for autonomous UAVs: multirotor, VTOL, fixed-wing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Erwin Lejeune", email = "erwin.lejeune15@gmail.com" }]
keywords = ["uav", "drone", "quadrotor", "vtol", "control", "robotics", "swarm", "planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "pillow>=12.1.1",
]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uav_sim"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "simulations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
ignore = ["E501", "N802", "N803", "N806", "N815"]

[tool.ruff.lint.per-file-ignores]
"simulations/**/run.py" = ["E702"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
packages = ["uav_sim"]
mypy_path = "src"
