[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uav-sim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uav_sim"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:launch_testing -p no:launch_ros"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
